@@ -56,7 +56,7 @@ class mosqpp_EXPORT mosquittopp {
 	private:
 		struct mosquitto *mosq;
 	public:
-		mosquittopp(const char *id);
+		mosquittopp(const char *id=NULL, bool clean_session=true);
 		~mosquittopp();
 
 		static void lib_version(int *major, int *minor, int *revision);
@@ -66,7 +66,7 @@ class mosqpp_EXPORT mosquittopp {
 		int log_init(int priorities, int destinations);
 		int will_set(bool will, const char *topic, uint32_t payloadlen=0, const uint8_t *payload=NULL, int qos=0, bool retain=false);
 		int username_pw_set(const char *username, const char *password=NULL);
-		int connect(const char *host, int port=1883, int keepalive=60, bool clean_session=true);
+		int connect(const char *host, int port=1883, int keepalive=60);
 		int reconnect();
 		int disconnect();
 		int publish(uint16_t *mid, const char *topic, uint32_t payloadlen=0, const uint8_t *payload=NULL, int qos=0, bool retain=false);
