@@ -162,7 +162,6 @@ struct mosquitto {
 	//void (*on_error)();
 	char *host;
 	int port;
-	bool random_id;
 #endif
 };
 
